--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "start": "next start",
     "lint": "next lint"
   },
+  
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "@auth/prisma-adapter": "^2.10.0",
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.13.0",
+    "@prisma/extension-accelerate": "^2.0.2",
+    "date-fns": "^4.1.0",
     "next": "15.4.5",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
+    "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0"
@@ -21,12 +27,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^20",
+    "@types/node": "^20.19.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
