feat(firebase): initial setup with compat layer

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "@tailwindcss/typography": "^0.5.16",
     "date-fns": "^4.1.0",
+    "firebase": "^12.1.0",
     "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
