--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "firebase": "^12.1.0",
     "next": "15.4.5",
     "next-auth": "^5.0.0-beta.29",
+    "pinata": "^2.4.9",
     "postcss": "^8.5.6",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
