--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
     "server-only": "^0.0.1"
   },
